force-app/main/default/objects/Opportunity_Manager__c/Opportunity_Manager__c.object-meta.xml
<CustomObject>
    <label>Opportunity Manager</label>
    <nameField>
        <label>Opportunity Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>