force-app/main/default/objects/Opportunity_Manager__c/fields/Manager_Type__c.field-meta.xml
<CustomField>
    <fullName>Manager_Type__c</fullName>
    <label>Manager Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Sales</fullName>
            </value>
            <value>
                <fullName>Operation Sales</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>